fix(theme/form-item): fix newLine help text alignment issue when wraps

--- a/packages/theme/src/scss/components/form-item/basic.scss
+++ b/packages/theme/src/scss/components/form-item/basic.scss
@@ -26,9 +26,8 @@
   }
 
   @include e(content) {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+    display: grid;
+    grid-template-rows: repeat(3, min-content);
     @include declareVars(
       (
         line-height: content-line-height,
@@ -36,8 +35,8 @@
     );
   }
 
-  // input wrapper
-  @include e(wrapper) {
+  // input element or input wrapper
+  @include e(element) {
     display: flex;
     flex: 1 0 100%;
     width: 100%;
